--- a/docs/Metode.tex
+++ b/docs/Metode.tex
@@ -42,7 +42,7 @@ Ovaj model bio je značajno brži od R-CNN-a (između 10 i 100 puta za vrijeme t
 
 Rješenje ovih problema je Brzi R-CNN sa sljedećim značajkama i prednostima:
 \begin{enumerate}
-    \item Veći mAP 
+    \item Veći mAP (Objašnjenje ove vrijednosti dano je u poglavlju \ref{Validacija})
     \item Treniranje se odvija u jednom prolasku kroz mrežu koristeći MTL \engl{Multi task loss}
     \item Treniranje ažurira sve slojeve mreže
     \item Nema spremanja značajki u memoriju
