--- a/docs/Pojmovi.tex
+++ b/docs/Pojmovi.tex
@@ -1,4 +1,4 @@
-\chapter{mAP vrijednost}
+\section{mAP vrijednost}
 
 Prije opisa postojećih metoda detekcije objekata potrebno je objasniti mAP vrijednost \engl{Mean Average Precission}, jer se ona često koristi prilikom evaluacije
 kvalitete treniranog modela.
